crontroller methods created

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,35 @@
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+<!-- -->
   <body>
+   <nav>
+   <ul>
+               <!-- static links-->
+      <li><%= link_to "Home", root_path %></li> 
+      <li><%=link_to "About", about_path%></li>
+      <li><%=link_to "Resources", resource_path%></li>
+              <!--logged in and logged out -->
+      <% unless logged_in? %>
+          <li><%=link_to "Login", login_path%></li>
+          <li><%=link_to "Signup", signup_path%></li>
+      <% else%>
+          <li><%=link_to "Profile", user_profile_path(current_user)%></li>
+          <li><%=link_to "My Blogs", user_blog_path %></li>
+          <li><%=link_to "My Resources",user_resource_path%></li>
+          <li><%=link_to "Blogs", blogs_path %></li>
+          <li><%=link_to "Logout", logout_path, method: "delete"%></li>
+          <li><%=link_to "Create Blog", new_user_blog_path(current_user)%></li>
+          <li><%=link_to "Add Resource", new_user_resource_path(current_user)%></li>
+
+      <% end%>
+    <li><%=%></li>
+   
+   </ul>
+   </nav>
+   
+   
+   
     <%= yield %>
   </body>
 </html>
