--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -4,7 +4,7 @@
  
  <div>
      <%= f.label :first_name%>
-     <%= f.text_field :First_name%>
+     <%= f.text_field :first_name%>
  </div>
  <div>
      <%= f.label :last_name%>
@@ -21,6 +21,7 @@
       <%=f.submit "Signup"%>
  
  <%end %>
-
+  <%= link_to "Facebook Signup", '../auth/facebook' %>
+   <%= link_to "Log In", login_path %>
 
   
