--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -3,13 +3,14 @@
 <%= form_for @user, url: signup_path do |f| %>
  
  <div>
-     <%= f.label :first_name%>
-     <%= f.text_field :first_name%>
+     <%= f.label :name%>
+     <%= f.text_field :name%>
  </div>
  <div>
-     <%= f.label :last_name%>
-     <%= f.text_field :last_name%>
+     <%= f.label :email%>
+     <%= f.text_field :email%>
  </div>
+ 
  <div>
      <%= f.label :username%>
      <%= f.text_field :username%>
