--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,22 @@
    <nav>
    <ul>
   
+
+             <!-- static links-->
+      <li><%= link_to "Home", home_path %></li> 
+      
+
+              <!--logged in and logged out -->
+      <% unless logged_in? %>
+          <li><%=link_to "Login", login_path%></li>
+          <li><%=link_to "Signup", signup_path%></li>
+          <li><%=link_to "resources", resources_path %></li>
+      <% else%>
+           <li><%=link_to "my posts", posts_path %></li>
+
+             <li><%=link_to "resources", resources_path %></li>
+            <li><%=link_to "Logout", logout_path, method: "delete"%></li>
+      <% end%>
     <li><%=%></li>
    
    </ul>
