--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,1 +1,17 @@
-<h1>all user posts</h1>
+<h1>posts</h1>
+
+<%= form_tag(posts_path(current_user), method: "get") do %>
+  <%= text_field_tag :term, nil,  id: "Search", placeholder: "enter search term" %>
+
+  <%= submit_tag "Search"%>
+<% end %>
+
+<% @posts.each do |post| %>
+  <div>
+    <h3><%= post.title %></h3>
+    
+    <p><%= post.published_date %></p>
+    <%= link_to "Read Post", post_path(post) %>
+  </div>
+<% end %>
+    <%= link_to "create new Post", new_post_path %>
