--- a/app/views/resources/index.html.erb
+++ b/app/views/resources/index.html.erb
@@ -1,1 +1,16 @@
-<h1>resources</h1>
+
+<%= form_tag(resources_path, method: "get") do %>
+  <%= text_field_tag :term, nil,  id: "Search", placeholder: "enter search term" %>
+ <%= submit_tag "Search"%>
+<% end %>
+
+<%= link_to "add resource", new_resource_path %>
+
+<% @resources.each do |resource| %>
+  <div>
+    <h3><%= resource.disorder%> - </h3>
+        <h3>Type: <%= resource.category%></h3>
+    <h3>Link: <%= link_to resource.resource_link%></h3>
+<br>
+  </div>
+<% end %>
