--- a/app/views/resources/new.html.erb
+++ b/app/views/resources/new.html.erb
@@ -1,17 +1,3 @@
-
-<%= form_for  @resource do |f| %>
-  <div>
-    <%= f.label :disorder %>
-    <%= f.text_field :disorder %>
-  </div><br>
-  <div>
-    <%= f.label :category %> <br>
-    <%= f.text_area :category %>
-  </div><br>
-  <div>
-    <%= f.label :resource_link %>
-    <%= f.text_field :resource_link %>
-  </div><br>
-
-  <%= f.submit  %>
-<% end %>
+<h1>add new resource</h1>
+<%= render partial: "resources/form", locals: {resource: @resource, button_name: "Add Resource"} %>
+ 
