--- a/app/views/resources/show.html.erb
+++ b/app/views/resources/show.html.erb
@@ -1,1 +1,18 @@
 <h1>a particular disorder resource links</h1>
+<h1><%= @resource.disorder%></h1>
+<h1><%= @resource.category%></h1>
+<h1><%= link_to @resource.resource_link%></h1>
+
+<br>
+<h2><%= resources.comments.count %> Comments </h2>
+<%= render @resource.comment %>
+<h3> Add a Comment:</h3>
+<%= form_for([@resource, @resource.comments.build]) do |f| %>
+<%= render 'comments/form' %>
+<% end %>
+
+<br>
+<%= link_to "Edit resource", edit_resource_path(@resource) %>
+<%= link_to "Delete resource", resource_path(@resource), method: :delete %>
+
+
