--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,3 +1,3 @@
-<%= comment.username %>
+<%= comment.user.username %>
 <%= comment.body %>
-<%= time_ago_in_words(comments.created_at) %>
+<%= time_ago_in_words(comment.created_at) %>
