--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
           <li><%=link_to "Signup", signup_path%></li>
           <li><%=link_to "resources", resources_path %></li>
       <% else%>
-           <li><%=link_to "my posts", posts_path %></li>
+           <li><%=link_to "posts", posts_path %></li>
 
              <li><%=link_to "resources", resources_path %></li>
             <li><%=link_to "Logout", logout_path, method: "delete"%></li>
