--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,9 +27,9 @@
 
 
 
-
-<%= link_to "Edit Post", edit_post_path(@post) %>
+<%if  current_user == @post.user %> 
+  <%= link_to "Edit Post", edit_post_path(@post) %>
 <%= link_to "Delete Post", post_path(@post), method: :delete %>
-
-
-
+<%else%>
+ <%= link_to "view all post", post_path(@post) %>
+<% end %>
