--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,5 +1,4 @@
-<h5>Add Comment</h5>
-<%= form_for ([@post, user.comments.build]) do |f| %>
+<%= form_for @comment do |f| %>
 <% if @error %>
           <div id="error_explanation">
             <p><%= @error %></p>
@@ -7,7 +6,7 @@
      <%end%>
 <p>
  <%=f.label :username%>
-  <%=f.text_field(:username)%>
+  <%=current_user.username%>
 </p>
 <p>
  <%=f.label :body%>
