--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,29 +4,13 @@
 </div>
 <br>
 <h2><%= @post.comments.count %> Comments </h2>
-<%= render @post.comments %>
 
-<h3> Add a Comment:</h3>
-<%= form_for([ @post, @post.comments.build]) do |f| %>
+<h2><%= @post.comments %>
+
+
+<%= link_to "Add Comment", new_post_comment_path(@post) %>
+
 <br>
-<p>
-<%= f.hidden_field :user_id, value: current_user.id %>
-</p>
-<br>
-<p>
-<%= f.label :body %>
-<%= f.text_area :body %>
-</p>
-<br>
-<p>
-  <%= f.submit  %>
- </p>
- <% end %>
-
-
-
-
-
 <%if  current_user == @post.user %> 
   <%= link_to "Edit Post", edit_post_path(@post) %>
 <%= link_to "Delete Post", post_path(@post), method: :delete %>
